--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>rc-server</module>
     </modules>
     <packaging>pom</packaging>
 
