初始密码支持自定义修改策略

--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -79,6 +79,16 @@
             <artifactId>ruoyi-generator</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>rc-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>rc-server</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
