初始密码支持自定义修改策略

--- a/rc-server/pom.xml
+++ b/rc-server/pom.xml
@@ -63,6 +63,10 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-common</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
