--- a/rc-api/pom.xml
+++ b/rc-api/pom.xml
@@ -15,6 +15,10 @@
             <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>rc-server</artifactId>
+        </dependency>
 
     </dependencies>
 
