--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -56,3 +56,17 @@ spring:
                 wall:
                     config:
                         multi-statement-allow: true
+    redis:
+        # Redis开关/默认关闭
+        enabled: true
+        database: 0
+        password:
+        host: 127.0.0.1
+        port: 6379
+        lettuce:
+            pool:
+                max-active:  100 # 连接池最大连接数（使用负值表示没有限制）
+                max-idle: 100 # 连接池中的最大空闲连接
+                min-idle: 50 # 连接池中的最小空闲连接
+                max-wait: 6000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        timeout: 1000
