--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,10 +6,11 @@ spring:
     druid:
       # 主库数据源
       master:
-#        url: jdbc:mysql://192.168.0.121:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+#        url: jdbc:mysql://106.54.23.241:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
         url: jdbc:mysql://localhost:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
         username: root
         password:
+#        password: ivgM9UvfeO#VVfotp
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
