--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,12 +6,11 @@ spring:
     druid:
       # 主库数据源
       master:
-        #        url: jdbc:mysql://106.54.23.241:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
-        #        username: root
-        #        password: ivgM9UvfeO#VVfotp
-        url: jdbc:mysql://localhost:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+#        url: jdbc:mysql://106.54.23.241:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+        url: jdbc:mysql://localhost:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
         username: root
-        password: root
+        password:
+#        password: ivgM9UvfeO#VVfotp
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
@@ -72,6 +71,22 @@ spring:
         min-idle: 50 # 连接池中的最小空闲连接
         max-wait: 6000 # 连接池最大阻塞等待时间（使用负值表示没有限制）
     timeout: 1000
+
+  # activemq
+  activemq:
+    broker-url: tcp://127.0.0.1:61616
+    user: admin
+    password: admin
+    close-timeout: 15s   # 在考虑结束之前等待的时间
+    in-memory: true      # 默认代理URL是否应该在内存中。如果指定了显式代理，则忽略此值。
+    non-blocking-redelivery: false  # 是否在回滚回滚消息之前停止消息传递。这意味着当启用此命令时，消息顺序不会被保留。
+    send-timeout: 0ms    # 等待消息发送响应的时间。设置为0等待永远。
+    packages:
+      trust-all: true    # 是否信任所有包
+    pool:
+      enabled: true
+      max-connections: 10     # 连接池最大连接数
+      idle-timeout: 30000ms   # 空闲的连接过期时间，默认为30秒
 
 mybatis-plus:
   configuration:
