--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -6,11 +6,11 @@ spring:
     druid:
       # 主库数据源
       master:
-#        url: jdbc:mysql://106.54.23.241:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+        #        url: jdbc:mysql://106.54.23.241:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
         url: jdbc:mysql://localhost:3306/rongchuang?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&serverTimezone=GMT%2B8
         username: root
-        password:
-#        password: ivgM9UvfeO#VVfotp
+        password: root
+      #        password: ivgM9UvfeO#VVfotp
       # 从库数据源
       slave:
         # 从数据源开关/默认关闭
@@ -87,8 +87,3 @@ spring:
       enabled: true
       max-connections: 10     # 连接池最大连接数
       idle-timeout: 30000ms   # 空闲的连接过期时间，默认为30秒
-
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapperLocations: classpath*:mapper/**/*Mapper.xml
