--- a/rc-api/pom.xml
+++ b/rc-api/pom.xml
@@ -77,6 +77,13 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.1.4.RELEASE</version>
         </dependency>
+        <!-- json jar包 -->
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
+        </dependency>
 
 
     </dependencies>
