--- a/ruoyi-system/pom.xml
+++ b/ruoyi-system/pom.xml
@@ -8,7 +8,7 @@
         <version>4.4.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>ruoyi-system</artifactId>
 
     <description>
